; ModuleID = '/home/carl/AnghaBench/SoftEtherVPN/src/Mayaqua/extr_Secure.c_UINT64ToCkDate.c'
source_filename = "/home/carl/AnghaBench/SoftEtherVPN/src/Mayaqua/extr_Secure.c_UINT64ToCkDate.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32, i32, i32 }
%struct.CK_DATE = type { i32, i32, i32 }

@.str = private unnamed_addr constant [5 x i8] c"%04u\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @UINT64ToCkDate(i8* %0, i32 %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.TYPE_3__, align 4
  %6 = alloca [32 x i8], align 16
  %7 = alloca [32 x i8], align 16
  %8 = alloca [32 x i8], align 16
  %9 = alloca %struct.CK_DATE*, align 8
  store i8* %0, i8** %3, align 8
  store i32 %1, i32* %4, align 4
  %10 = load i8*, i8** %3, align 8
  %11 = bitcast i8* %10 to %struct.CK_DATE*
  store %struct.CK_DATE* %11, %struct.CK_DATE** %9, align 8
  %12 = load %struct.CK_DATE*, %struct.CK_DATE** %9, align 8
  %13 = icmp eq %struct.CK_DATE* %12, null
  br i1 %13, label %14, label %15

14:                                               ; preds = %2
  br label %47

15:                                               ; preds = %2
  %16 = load i32, i32* %4, align 4
  %17 = call i32 @UINT64ToSystem(%struct.TYPE_3__* %5, i32 %16)
  %18 = getelementptr inbounds [32 x i8], [32 x i8]* %6, i64 0, i64 0
  %19 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %5, i32 0, i32 2
  %20 = load i32, i32* %19, align 4
  %21 = call i32 @Format(i8* %18, i32 32, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str, i64 0, i64 0), i32 %20)
  %22 = getelementptr inbounds [32 x i8], [32 x i8]* %7, i64 0, i64 0
  %23 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %5, i32 0, i32 1
  %24 = load i32, i32* %23, align 4
  %25 = call i32 @Format(i8* %22, i32 32, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str, i64 0, i64 0), i32 %24)
  %26 = getelementptr inbounds [32 x i8], [32 x i8]* %8, i64 0, i64 0
  %27 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %5, i32 0, i32 0
  %28 = load i32, i32* %27, align 4
  %29 = call i32 @Format(i8* %26, i32 32, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str, i64 0, i64 0), i32 %28)
  %30 = load %struct.CK_DATE*, %struct.CK_DATE** %9, align 8
  %31 = call i32 @Zero(%struct.CK_DATE* %30, i32 12)
  %32 = load %struct.CK_DATE*, %struct.CK_DATE** %9, align 8
  %33 = getelementptr inbounds %struct.CK_DATE, %struct.CK_DATE* %32, i32 0, i32 2
  %34 = load i32, i32* %33, align 4
  %35 = getelementptr inbounds [32 x i8], [32 x i8]* %6, i64 0, i64 0
  %36 = call i32 @Copy(i32 %34, i8* %35, i32 4)
  %37 = load %struct.CK_DATE*, %struct.CK_DATE** %9, align 8
  %38 = getelementptr inbounds %struct.CK_DATE, %struct.CK_DATE* %37, i32 0, i32 1
  %39 = load i32, i32* %38, align 4
  %40 = getelementptr inbounds [32 x i8], [32 x i8]* %7, i64 0, i64 0
  %41 = call i32 @Copy(i32 %39, i8* %40, i32 2)
  %42 = load %struct.CK_DATE*, %struct.CK_DATE** %9, align 8
  %43 = getelementptr inbounds %struct.CK_DATE, %struct.CK_DATE* %42, i32 0, i32 0
  %44 = load i32, i32* %43, align 4
  %45 = getelementptr inbounds [32 x i8], [32 x i8]* %8, i64 0, i64 0
  %46 = call i32 @Copy(i32 %44, i8* %45, i32 2)
  br label %47

47:                                               ; preds = %15, %14
  ret void
}

declare dso_local i32 @UINT64ToSystem(%struct.TYPE_3__*, i32) #1

declare dso_local i32 @Format(i8*, i32, i8*, i32) #1

declare dso_local i32 @Zero(%struct.CK_DATE*, i32) #1

declare dso_local i32 @Copy(i32, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
